08/project2/deploy-svc-bar.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bar-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar-app
  template:
    metadata:
      labels:
        app: bar-app
    spec:
      containers:
      - name: bar-container
        image: whatwant/node-web:2.0
        ports:
        - containerPort: 8080

---
kind: Service
apiVersion: v1
metadata:
  name: bar-svc
spec:
  selector:
    app: bar-app
  ports:
  - port: 80
    targetPort: 8080
