08/project2/ingress-foo-bar.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: myingress2
spec:
  ingressClassName: nginx
  rules:
  - host: foo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: foo-svc
            port:
              number: 80

  - host: bar.foo.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bar-svc
            port:
              number: 80
